--- a/index.html
+++ b/index.html
@@ -485,10 +485,11 @@
           <form class="form-subscribe" name="issue">
             <label class="form-one" for="email-footer">
               <input
-                type="form-input"
                 class="text-subscribe"
+                type="form-input"
                 name="text-email-footer"
                 placeholder="Email"
+                id="email-footer"
               />
             </label>
             <button class="button-email" type="email">
