--- a/index.html
+++ b/index.html
@@ -501,5 +501,49 @@
         </div>
       </div>
     </footer>
+    <!--modal-->
+    <div class="modal-container">
+      <div class="modal">
+        <button class="maodal-butt" type="button">
+          <svg class="modal-icon" wight="8" height="8">
+            <use herf="./images/icons2.svg#icon-Vector-4"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call yo back</p>
+        <form class="modal-form"></form>
+        <div class="madal-input">
+          <label class="modal-label" for="last-first">Name</label>
+          <div class="modal-on">
+            <input
+              class="modal-in"
+              type="text"
+              name="last-first"
+              id="last-first"
+            />
+            <svg class="modal-icon-in" wight="18" height="24">
+              <use href="./images/icons2.svg#icon-Vector"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="madal-input">
+          <label class="modal-label" for="phone">Phone</label>
+          <div class="modal-on">
+            <input class="modal-in" type="tel" name="phone" id="phone" />
+            <svg class="modal-icon-in" wight="18" height="24">
+              <use href="./images/icons2.svg#icon-Vector-2"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="madal-input">
+          <label class="modal-label" for="email">Email</label>
+          <div class="modal-on">
+            <input class="modal-in" type="email" name="email" id="email" />
+            <svg class="modal-icon-in" wight="18" height="24">
+              <use href="./images/icons2.svg#icon-Vector-3"></use>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
