--- a/index.html
+++ b/index.html
@@ -486,13 +486,13 @@
             <label class="form-one" for="email-footer">
               <input
                 class="text-subscribe"
-                type="form-input"
+                type="email"
                 name="text-email-footer"
-                placeholder="Email"
+                placeholder="E-mail"
                 id="email-footer"
               />
             </label>
-            <button class="button-email" type="email">
+            <button class="button-email" type="submit">
               Subscribe<svg class="icon-subscribe" width="24" height="24">
                 <use href="./images/icons2.svg#icon-icon-send"></use>
               </svg>
