--- a/index.html
+++ b/index.html
@@ -505,22 +505,22 @@
     <div class="modal-container">
       <div class="modal">
         <button class="maodal-butt" type="button">
-          <svg class="modal-icon" wight="8" height="8">
-            <use herf="./images/icons2.svg#icon-Vector-4"></use>
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons2.svg#icon-Vector-4"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call yo back</p>
         <form class="modal-form">
           <div class="madal-input">
-            <label class="modal-label" for="last-first">Name</label>
+            <label class="modal-label" for="user-name">Name</label>
             <div class="modal-on">
               <input
                 class="modal-in"
                 type="text"
-                name="last-first"
-                id="last-first"
+                name="user-name"
+                id="user-name"
               />
-              <svg class="modal-icon-in" wight="18" height="24">
+              <svg class="modal-icon-in" width="18" height="24">
                 <use href="./images/icons2.svg#icon-Vector"></use>
               </svg>
             </div>
@@ -529,7 +529,7 @@
             <label class="modal-label" for="phone">Phone</label>
             <div class="modal-on">
               <input class="modal-in" type="tel" name="phone" id="phone" />
-              <svg class="modal-icon-in" wight="18" height="24">
+              <svg class="modal-icon-in" width="18" height="24">
                 <use href="./images/icons2.svg#icon-Vector-2"></use>
               </svg>
             </div>
@@ -538,18 +538,19 @@
             <label class="modal-label" for="email">Email</label>
             <div class="modal-on">
               <input class="modal-in" type="email" name="email" id="email" />
-              <svg class="modal-icon-in" wight="18" height="24">
+              <svg class="modal-icon-in" width="18" height="24">
                 <use href="./images/icons2.svg#icon-Vector-3"></use>
               </svg>
             </div>
           </div>
           <!--modal-text-->
           <div class="modal-text">
-            <label for="modal-label" for="comment">Comment</label>
+            <label for="user-comment" for="comment">Comment</label>
             <textarea
+              class="modal-textarea"
               name="textarea"
-              name="comment"
-              id="comment"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -559,11 +560,12 @@
               class="madal-input-checkbox"
               type="checkbox"
               name="privacy"
-              id=""
+              id="user-privacy"
+              value="true"
             />
-            <label for="modal-label-checkbox" for="privacy">
+            <label class="modal-label-checkbox" for="user-privacy">
               <span class="modal-span">
-                <svg class="modal-checkbox-icon" widht="10" height="8">
+                <svg class="modal-checkbox-icon" width="10" height="8">
                   <use href="./images/icons2.svg#icon-Vector-4"></use>
                 </svg>
               </span>
