--- a/index.html
+++ b/index.html
@@ -545,10 +545,9 @@
           </div>
           <!--modal-text-->
           <div class="modal-text">
-            <label for="user-comment" for="comment">Comment</label>
+            <label for="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
-              name="textarea"
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
