--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
           </div>
           <!--modal-text-->
           <div class="modal-text">
-            <label for="modal-label" for="user-comment">Comment</label>
+            <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
               name="user-comment"
