--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             <input
               class="madal-input-checkbox"
               type="checkbox"
-              name="privacy"
+              name="user-privacy"
               id="user-privacy"
               value="true"
             />
