--- a/index.html
+++ b/index.html
@@ -502,9 +502,9 @@
       </div>
     </footer>
     <!--modal-->
-    <div class="modal-container">
+    <div class="backdrop">
       <div class="modal">
-        <button class="maodal-butt" type="button">
+        <button class="modal-butt" type="button">
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons2.svg#icon-Vector-4"></use>
           </svg>
