--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call yo back</p>
         <form class="modal-form">
-          <div class="madal-input">
+          <div class="modal-input">
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-on">
               <input
@@ -525,7 +525,7 @@
               </svg>
             </div>
           </div>
-          <div class="madal-input">
+          <div class="modal-input">
             <label class="modal-label" for="phone">Phone</label>
             <div class="modal-on">
               <input class="modal-in" type="tel" name="phone" id="phone" />
@@ -534,7 +534,7 @@
               </svg>
             </div>
           </div>
-          <div class="madal-input">
+          <div class="modal-input">
             <label class="modal-label" for="email">Email</label>
             <div class="modal-on">
               <input class="modal-in" type="email" name="email" id="email" />
@@ -572,7 +572,7 @@
               <a class="modal-checkbox-link" href="#"> Privacy Policy</a>
             </label>
           </div>
-          <button class="maodal-button" type="submit">Send</button>
+          <button class="modal-button" type="submit">Send</button>
         </form>
       </div>
     </div>
