--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
           <!--checkbox-->
           <div class="modal-checkbox">
             <input
-              class="madal-input-checkbox visually-hidden"
+              class="modal-input-checkbox visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
